# alphazero

./: .gitignore  README.md  alpha-zero.py  evaluation.py  game.py  main.py  mcts.py  network.py  players.py  pyproject.toml  tictactoe.py  training.py
alphazero/: __init__.py  __main__.py  evaluation.py  mcts.py  network.py  parallel.py  players.py  plotting.py  training.py
alphazero/games/: __init__.py  chess.py
games/: __init__.py  connect_four.py  tictactoe.py
scripts/: pairwise_evaluation.py
