[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alphazero"
version = "0.1.0"
description = "AlphaZero implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chess>=1.11.2",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "seaborn>=0.13.2",
    "torch==2.4.0",
    "tqdm>=4.67.1",
]
